TODO
- Finish early in detection if search param found
##################################################################
v0.1.3 - Event Logging 
    - Commit: 
    x Add Logs for sending/receiving 
    x Prompt name and timeout on first use (no ~/.dali file yet)
    x Filesize string (Kb, Mb instead of bytes)
    x Rename destination path if file exists (suffix _N)
    x Open overwrite flag
    x Send auto option (autosend if 1)
    - Check if can prio IP based on profile (e.g. LAN, WiFi)
    - View logs
    - Log filters (action, date, from, to, file regexp)
v0.1.2 - Feature Updates 
    x Commit: 2026-01-16 16:35
    x Set defaultTimeout to 3s
    x Lowercase command and option keys
    x Update README Usage
    x Transfer command implementations to internal package 
    x Improve help command
    x Find options (name, ip)
    x Open auto-accept
        x In Receiving files, prompt confirmation
        x Send rejection message if not accepted
    x Update command 
v0.1.1 - Hand-Coded Dali    
    x Commit: 2026-01-16 11:21
    x Remove AI-generated code 
    x Load name and IP address 
    x Get command and args options 
    x Set name and timeout (persistent)
    x Discover peers 
    x Discovery listener 
    x Open command options 
    x Receive file 
    x Send command options 
    x Send file
    x Version and commands list
v0.1.0 - Vibe-Coded Dali 
    x Commit: 2026-01-14 15:11
    x Vibe coded (Claude Opus 4.5) in Rust 
    x Add future features list to README 
    x Vibe coded (Claude Opus 4.5) conversion of Rust to Go